# qiucktools

./: .gitignore  README.md  README_JA.md  README_ZH.md  package.json  pnpm-lock.yaml  tools.json
docs/: lessons-learned-tray-menu.md
scripts/: chromedev.sh  dev-mps.sh  replace-p7b.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  auto_launch.rs  config.rs  error.rs  lib.rs  main.rs  panic_hook.rs  settings.rs  store.rs  tray.rs
src-tauri/src/commands/: logs.rs  mod.rs  settings.rs  tools.rs
src-tauri/src/database/: migration.rs  mod.rs  schema.rs
src-tauri/src/database/dao/: logs.rs  mod.rs  tools.rs
src-tauri/src/services/: executor.rs  mod.rs  notifier.rs
src/components/: ParamDialog.tsx
src/components/quicktools/: ExecutionPanel.tsx  LogViewer.tsx  SettingsPage.tsx  ToolList.tsx  index.ts
src/components/settings/: SettingsPage.tsx
src/hooks/: useTools.ts
src/i18n/locales/: en.json  ja.json  zh.json
src/lib/api/: tools.ts
src/types/: tool.ts
